--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">CarsList</string>
     <string name="cars">Cars</string>
+    <string name="please_try_again">Please try again</string>
+    <string name="try_again">Try again</string>
 </resources>
